[package]
name = "lib_cpi"
version = "0.5.0"
edition = "2024"
license = "MIT"
description = "A library for generating CPIs for OmniCloud."

[dependencies]
serde_json = { version = "1.0.140", features = ["preserve_order"] }
serde = { version = "1.0.140", features = ["derive"] }
lib_cpi_macros = "0.4.0"